[tool.poetry]
name = "kexp-dj-assistant"
version = "0.1.0"
description = "Tool for KEXP DJ Assistants searches KEXP Events, KEXP YouTube, and Songkick for the currently playing artist."
authors = ["Michael Appleton"]
packages = [
    { include = "*.py" },
]


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
google-api-python-client = "^2.15.0"
pendulum = "^2.1.2"
wheel = "^0.37.0"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
